[package]
name = "font-atlas"
version = "0.1.3"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "A crate for generating font atlases for games or guis"
license = "MIT"

[features]
default = [ ]
with-serde = [ "serde", "serde_derive" ]

[dependencies]
rusttype = "0.4"
void = "1.0.*"
serde_derive = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
